--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "node-unzip-2": "^0.2.7",
+    "progress": "^2.0.0",
     "request": "^2.85.0"
   }
 }
