--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "archiver": "^2.1.1",
     "colors": "^1.2.1",
     "commander": "^2.15.1",
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "node-unzip-2": "^0.2.7",
