--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swartz",
   "version": "0.0.11",
   "description": "node web server",
-  "main": "index.js",
+  "main": "app/swartz.js",
   "preferGlobal": "true",
   "bin": {
     "swartz": "bin/swartz.js",
