--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
+    "liftoff": "^2.5.0",
     "node-unzip-2": "^0.2.7",
     "progress": "^2.0.0",
     "request": "^2.85.0"
