--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swartz",
   "version": "0.0.17",
-  "description": "node web server",
+  "description": "A deployment scheme for Test Server",
   "main": "app/swartz.js",
   "preferGlobal": "true",
   "bin": {
