--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swartz",
-  "version": "0.1.24",
+  "version": "0.1.25",
   "description": "A deployment scheme for Test Server",
   "main": "app/swartz.js",
   "preferGlobal": "true",
@@ -27,15 +27,16 @@
   },
   "homepage": "https://github.com/hold-baby/swartz#readme",
   "dependencies": {
-    "archiver": "^2.1.1",
-    "colors": "^1.2.1",
-    "commander": "^2.15.1",
-    "connect-history-api-fallback": "^1.5.0",
-    "express": "^4.16.3",
-    "formidable": "^1.2.1",
-    "liftoff": "^2.5.0",
-    "node-unzip-2": "^0.2.7",
-    "progress": "^2.0.0",
-    "request": "^2.85.0"
+    "archiver": "2.1.1",
+    "colors": "1.2.1",
+    "commander": "2.15.1",
+    "connect-history-api-fallback": "1.5.0",
+    "express": "4.16.3",
+    "formidable": "1.2.1",
+    "http-proxy-middleware": "0.19.1",
+    "liftoff": "2.5.0",
+    "node-unzip-2": "0.2.7",
+    "progress": "2.0.0",
+    "request": "2.85.0"
   }
 }
