--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swartz",
-  "version": "0.1.38",
+  "version": "0.2.1",
   "description": "A deployment scheme for Test Server",
   "main": "app/swartz.js",
   "preferGlobal": "true",
@@ -27,18 +27,22 @@
   },
   "homepage": "https://github.com/hold-baby/swartz#readme",
   "dependencies": {
-    "address": "^1.1.2",
-    "archiver": "^2.1.1",
-    "colors": "^1.2.1",
-    "commander": "^2.15.1",
-    "connect-history-api-fallback": "^1.5.0",
-    "express": "^4.16.3",
-    "formidable": "^1.2.1",
-    "http-proxy-middleware": "^0.19.1",
-    "liftoff": "^2.5.0",
-    "node-unzip-2": "^0.2.7",
+    "address": "1.1.2",
+    "archiver": "2.1.1",
+    "colors": "1.2.1",
+    "commander": "2.15.1",
+    "connect-history-api-fallback": "1.5.0",
+    "easy-excel-exporter": "1.0.1",
+    "express": "4.16.3",
+    "formidable": "1.2.1",
+    "fs-extra": "9.0.1",
+    "globby": "11.0.1",
+    "http-proxy-middleware": "0.19.1",
+    "js-beautify": "1.11.0",
+    "liftoff": "2.5.0",
     "npm-yuan": "^0.1.22",
-    "progress": "^2.0.0",
-    "request": "^2.85.0"
+    "progress": "2.0.0",
+    "request": "2.85.0",
+    "unzipper": "0.10.8"
   }
 }
