--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swartz",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A deployment scheme for Test Server",
   "main": "app/swartz.js",
   "preferGlobal": "true",
@@ -29,6 +29,8 @@
   "dependencies": {
     "address": "1.1.2",
     "archiver": "2.1.1",
+    "axios": "0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "colors": "1.2.1",
     "commander": "2.15.1",
     "connect-history-api-fallback": "1.5.0",
@@ -40,7 +42,7 @@
     "http-proxy-middleware": "0.19.1",
     "js-beautify": "1.11.0",
     "liftoff": "2.5.0",
-    "npm-yuan": "^0.1.22",
+    "npm-yuan": "^0.1.23",
     "progress": "2.0.0",
     "request": "2.85.0",
     "unzipper": "0.10.8"
